Fix for username in title bar on mobile

--- a/client/assets/scss/menu.scss
+++ b/client/assets/scss/menu.scss
@@ -1,10 +1,10 @@
 .findme {
-	opacity: 1;
-	line-height: 60px;
-	margin-left: 20px;
-	img:hover {
-		opacity: 0.7;
-	}
+    opacity: 1;
+    line-height: 60px;
+    margin-left: 20px;
+    img:hover {
+        opacity: 0.7;
+    }
 }
 
 .sub-menu {
@@ -13,6 +13,6 @@
     }
 }
 .mobileinlogg{
-	font-size: 10px;
-	flex: 0 0 17% !important;
+    font-size: 10px;
+    margin-right: 1em;
 }
